[package]
name = "reverse"
version = "0.1.0"
authors = ["sharnoff <github@max.sharnoff.org>"]
edition = "2018"
# @def "reverse description" v1
description = "A fine-grained intra-project tool for maintaining internal consistency"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
regex = "1.3"
serde = { version = "1", features=["derive"] }
toml = "0.5"
ansi_term = "0.12"
unicode-width = "0.1"
glob = "0.3"
